syntax = "proto3";

package com.sim.spriced.platform.grpc.generated;

option java_package = "com.sim.spriced.platform.grpc.generated";
option java_multiple_files = true;

// CHANGED: Service name from ApplicationService to Platform
service Platform {
    // CHANGED: Method name from BusinessExecution to PlatformExecution
    rpc PlatformExecution (PlatformRequest) returns (PlatformResponse);
}

// You likely need to rename these messages too,
// OR check what the client is actually sending.
// Assuming client sends PlatformRequest/PlatformResponse:
message PlatformRequest {
    string payload = 1;
}

message PlatformResponse {
    string result = 1;
}